--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,7 +56,8 @@ header {
     margin: 0 auto;
     line-height: 65px;
     display: block;
-    font-family: fantasy;
+    font-size: 25px;
+    font-family: "megascope-variable", sans-serif;
     color: white;
     padding: 0 30px;
     transition: all 0.5s;
