メイン作成

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,3 +66,11 @@ header {
 .header-center li:hover {
     background-color: rgb(77, 77, 77);
 }
+
+/* メイン */
+
+.main-wrapper {
+    background-image: url(./images/background1.png);
+    background-size: cover;
+    text-align: center;
+}
