--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,9 +29,9 @@ header {
     opacity: 0.8;
     height: 65px;
     width: 100%;
-    position: fixed;
+    /* position: fixed;
     top: 0;
-    z-index: 10;
+    z-index: 10; */
 }
 
 .header-left {
@@ -70,7 +70,9 @@ header {
 /* メイン */
 
 .main-wrapper {
+    padding: 180px 0 100px 0;
     background-image: url(./images/background1.png);
     background-size: cover;
+    color: white;
     text-align: center;
 }
