--- a/stylesheet.css
+++ b/stylesheet.css
@@ -58,7 +58,7 @@ header {
     display: block;
     font-size: 25px;
     font-family: "megascope-variable", sans-serif;
-    color: white;
+    color: rgb(255, 255, 255);
     padding: 0 30px;
     transition: all 0.5s;
 }
@@ -73,7 +73,7 @@ header {
     padding: 150px 0 150px 0;
     background-image: url(./images/background1.png);
     background-size: cover;
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: center;
 }
 
@@ -90,21 +90,24 @@ header {
 
 .main-wrapper p {
     font-size: 25px;
-    margin: 0;
+    margin: 0 20 0 0;
     padding: 0;
     line-height: 0px;
 }
 
 .main-wrapper h2 {
     margin: 0;
-    padding: 0;
+    padding-top: 20px;
     line-height: 0px;
+    float: left;
+    margin-left: 30px;
 }
 
 /* ボタン */
 
 .btn-wrapper {
     float: right;
+    margin-top: 20px;
     margin-right: 50px;
 }
 
@@ -116,7 +119,6 @@ header {
     padding: 8px 24px;
     color: white;
     display: inline-block;
-    border-radius: 4px;
     transition: all 0.5s;
 }
 
