--- a/responsive.css
+++ b/responsive.css
@@ -13,6 +13,8 @@
         max-width: 670px;
     }
 
+    /* ヘッダー */
+
     .header-center {
         display: none;
     }
@@ -20,4 +22,34 @@
     .menu-icon {
         display: block;
     }
+
+    /* メイン */
+    .main-wrapper {
+        text-align: left;
+    }
+
+    .limit {
+        width: 100%;
+    }
+
+    .main-wrapper h2 {
+        margin-left: 0px;
+    }
+
+    /* ボタン */
+    .btn-wrapper {
+        display: block;
+    }
+
+    /* メイン2 */
+    .main2 {
+        padding: 80px 0 80px 0;
+
+    }
+
+    .main2 img {
+        width: 350px;
+        float: left;
+    }
+
 }
