--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,9 +29,6 @@ header {
     opacity: 0.8;
     height: 65px;
     width: 100%;
-    position: fixed;
-    top: 0;
-    z-index: 10;
 }
 
 .header-left {
@@ -39,7 +36,8 @@ header {
 }
 
 .header-logo {
-    width: 70px;
+    padding-left: 15px;
+    width: 65px;
 }
 
 .header-center {
@@ -55,12 +53,159 @@ header {
     margin: 0 auto;
     line-height: 65px;
     display: block;
-    font-family: fantasy;
-    color: white;
+    font-size: 25px;
+    font-family: "megascope-variable", sans-serif;
+    color: rgb(255, 255, 255);
     padding: 0 30px;
     transition: all 0.5s;
 }
 
 .header-center li:hover {
     background-color: rgb(77, 77, 77);
+}
+
+/* メイン */
+
+.main-wrapper {
+    padding: 150px 0 180px 0;
+    background-image: url(./images/background1.png);
+    background-size: cover;
+    color: rgb(255, 255, 255);
+    text-align: center;
+}
+
+.limit {
+    width: 800px;
+    margin: 0 auto;
+}
+
+.main-wrapper h1 {
+    font-size: 90px;
+    margin: 0;
+    padding: 0;
+}
+
+.main-wrapper p {
+    font-size: 25px;
+    margin: 0 20 0 0;
+    padding: 0;
+    line-height: 0px;
+}
+
+.main-wrapper h2 {
+    margin: 0;
+    padding-top: 20px;
+    line-height: 0px;
+    float: left;
+    margin-left: 30px;
+}
+
+/* ボタン */
+
+.btn-wrapper {
+    float: right;
+    margin-top: 20px;
+    margin-right: 50px;
+}
+
+.signup {
+    background-color: #0CB8A9;
+}
+
+.btn {
+    padding: 8px 24px;
+    color: white;
+    display: inline-block;
+    transition: all 0.5s;
+}
+
+.btn:hover {
+    opacity: 0.8;
+}
+
+/* メイン2 */
+
+.clear {
+    clear: left;
+}
+
+.main2 {
+    padding: 150px 0 180px 0;
+    background-color: #56BF8A;
+    background-size: cover;
+    color: rgb(255, 255, 255);
+}
+
+.limit2 {
+        width: 300px;
+        float: left;
+}
+
+.main2 h1 {
+    font-family: "monomaniac-one", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    float: left;
+}
+
+.main2 p {
+    float: left;
+    
+}
+
+.main2 img {
+    width: 350px;
+    float: right;
+}
+
+/* メイン3　*/
+.main3 {
+    padding: 40px 0 130px 0;
+    background-color: #0CB8A9;
+    color: rgb(255, 255, 255);
+    text-align: center;
+}
+
+.heading {
+    text-align: center;
+}
+
+.heading h1 {
+    font-family: "monomaniac-one", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 50px;
+}
+
+.contents {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.content {
+    float: left;
+    width: 33%;
+}
+
+.content-icon {
+    position: relative;
+}
+
+.content-icon p {
+    position: absolute;
+    top: 13px;
+    left: 55px;
+    color: #0CB8A9;
+    font-weight: bold;
+}
+
+.content-icon img {
+    background-color: #E0FE9C;
+    width: 200px;
+    padding: 50px;
+}
+
+.content p {
+    width: 200px;
+    margin: 0 auto;
 }
