--- a/stylesheet.css
+++ b/stylesheet.css
@@ -166,10 +166,6 @@ header {
     text-align: center;
 }
 
-.heading {
-    text-align: center;
-}
-
 .heading h1 {
     font-family: "monomaniac-one", sans-serif;
     font-weight: 400;
@@ -193,8 +189,8 @@ header {
 
 .content-icon p {
     position: absolute;
-    top: 13px;
-    left: 55px;
+    top: 0px;
+    width: 100%;
     color: #0CB8A9;
     font-weight: bold;
 }
@@ -205,7 +201,7 @@ header {
     padding: 50px;
 }
 
-.content p {
+.Text-content {
     width: 200px;
     margin: 0 auto;
 }
